// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag[Base] should render correctly  1`] = `
<div>
  <div
    class="ctvabz1 soui-tag-tag c-46s9fg soui-tag-default chg5eon soui-tag-bright"
  >
    <span
      class="c-3cli0a soui-tag-wrapper"
    >
      Default
    </span>
  </div>
  <div
    class="ctvabz1 soui-tag-tag c2j8ubv soui-tag-info chg5eon soui-tag-bright"
  >
    <span
      class="c-3cli0a soui-tag-wrapper"
    >
      Info
    </span>
  </div>
  <div
    class="ctvabz1 soui-tag-tag ci4zc8w soui-tag-danger chg5eon soui-tag-bright"
  >
    <span
      class="c-3cli0a soui-tag-wrapper"
    >
      Danger
    </span>
  </div>
  <div
    class="ctvabz1 soui-tag-tag c-b51zkx soui-tag-warning chg5eon soui-tag-bright"
  >
    <span
      class="c-3cli0a soui-tag-wrapper"
    >
      Warning
    </span>
  </div>
  <div
    class="ctvabz1 soui-tag-tag caexcsm soui-tag-success chg5eon soui-tag-bright"
  >
    <span
      class="c-3cli0a soui-tag-wrapper"
    >
      Success
    </span>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about color 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="ctvabz1 soui-tag-tag c-npvikw soui-tag-tangerine chg5eon soui-tag-bright"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c-g103f8 soui-tag-magenta chg5eon soui-tag-bright"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag co4lfmh soui-tag-purple chg5eon soui-tag-bright"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag ckp6flb soui-tag-indigo chg5eon soui-tag-bright"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c2j58g0 soui-tag-cyan chg5eon soui-tag-bright"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c2jbusz soui-tag-neon chg5eon soui-tag-bright"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c7kzueu soui-tag-lemon chg5eon soui-tag-bright"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag cnllj2j soui-tag-orange chg5eon soui-tag-bright"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Orange
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="ctvabz1 soui-tag-tag c-npvikw soui-tag-tangerine c2j6tsw soui-tag-fill"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c-g103f8 soui-tag-magenta c2j6tsw soui-tag-fill"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag co4lfmh soui-tag-purple c2j6tsw soui-tag-fill"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag ckp6flb soui-tag-indigo c2j6tsw soui-tag-fill"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c2j58g0 soui-tag-cyan c2j6tsw soui-tag-fill"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c2jbusz soui-tag-neon c2j6tsw soui-tag-fill"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c7kzueu soui-tag-lemon c2j6tsw soui-tag-fill"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag cnllj2j soui-tag-orange c2j6tsw soui-tag-fill"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Orange
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="ctvabz1 soui-tag-tag c-npvikw soui-tag-tangerine cmzylol soui-tag-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c-g103f8 soui-tag-magenta cmzylol soui-tag-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag co4lfmh soui-tag-purple cmzylol soui-tag-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag ckp6flb soui-tag-indigo cmzylol soui-tag-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c2j58g0 soui-tag-cyan cmzylol soui-tag-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c2jbusz soui-tag-neon cmzylol soui-tag-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c7kzueu soui-tag-lemon cmzylol soui-tag-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag cnllj2j soui-tag-orange cmzylol soui-tag-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Orange
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="ctvabz1 soui-tag-tag c-npvikw soui-tag-tangerine co4138r soui-tag-bright-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c-g103f8 soui-tag-magenta co4138r soui-tag-bright-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag co4lfmh soui-tag-purple co4138r soui-tag-bright-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag ckp6flb soui-tag-indigo co4138r soui-tag-bright-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c2j58g0 soui-tag-cyan co4138r soui-tag-bright-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c2jbusz soui-tag-neon co4138r soui-tag-bright-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c7kzueu soui-tag-lemon co4138r soui-tag-bright-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag cnllj2j soui-tag-orange co4138r soui-tag-bright-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Orange
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about mode 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="ctvabz1 soui-tag-tag c-46s9fg soui-tag-default chg5eon soui-tag-bright"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c2j8ubv soui-tag-info chg5eon soui-tag-bright"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag ci4zc8w soui-tag-danger chg5eon soui-tag-bright"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c-b51zkx soui-tag-warning chg5eon soui-tag-bright"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag caexcsm soui-tag-success chg5eon soui-tag-bright"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="ctvabz1 soui-tag-tag c-46s9fg soui-tag-default c2j6tsw soui-tag-fill"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c2j8ubv soui-tag-info c2j6tsw soui-tag-fill"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag ci4zc8w soui-tag-danger c2j6tsw soui-tag-fill"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c-b51zkx soui-tag-warning c2j6tsw soui-tag-fill"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag caexcsm soui-tag-success c2j6tsw soui-tag-fill"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="ctvabz1 soui-tag-tag c-46s9fg soui-tag-default cmzylol soui-tag-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c2j8ubv soui-tag-info cmzylol soui-tag-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag ci4zc8w soui-tag-danger cmzylol soui-tag-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c-b51zkx soui-tag-warning cmzylol soui-tag-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag caexcsm soui-tag-success cmzylol soui-tag-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 0px;"
  >
    <div
      class="ctvabz1 soui-tag-tag c-46s9fg soui-tag-default co4138r soui-tag-bright-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c2j8ubv soui-tag-info co4138r soui-tag-bright-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag ci4zc8w soui-tag-danger co4138r soui-tag-bright-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c-b51zkx soui-tag-warning co4138r soui-tag-bright-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag caexcsm soui-tag-success co4138r soui-tag-bright-outline"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about size 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="ctvabz1 soui-tag-tag c7oz9hm soui-tag-small c-46s9fg soui-tag-default chg5eon soui-tag-bright"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Small
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c-46s9fg soui-tag-default chg5eon soui-tag-bright"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c7kxdz2 soui-tag-large c-46s9fg soui-tag-default chg5eon soui-tag-bright"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        Large
      </span>
    </div>
  </div>
  <div>
    <div
      class="ctvabz1 soui-tag-tag c7oz9hm soui-tag-small c-46s9fg soui-tag-default chg5eon soui-tag-bright"
    >
      <div
        class="c-3cli0a soui-tag-wrapper"
      >
        <span
          class="c-tcgym4 soui-tag-container"
        >
          Small
        </span>
      </div>
      <div
        class="c-uj954c soui-tag-close-icon"
      >
        <span
          class="c-dd149t soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c-46s9fg soui-tag-default chg5eon soui-tag-bright"
    >
      <div
        class="c-3cli0a soui-tag-wrapper"
      >
        <span
          class="c-tcgym4 soui-tag-container"
        >
          Default
        </span>
      </div>
      <div
        class="c-uj954c soui-tag-close-icon"
      >
        <span
          class="c-dd149t soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c7kxdz2 soui-tag-large c-46s9fg soui-tag-default chg5eon soui-tag-bright"
    >
      <div
        class="c-3cli0a soui-tag-wrapper"
      >
        <span
          class="c-tcgym4 soui-tag-container"
        >
          Large
        </span>
      </div>
      <div
        class="c-uj954c soui-tag-close-icon"
      >
        <span
          class="c-dd149t soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about dynamic 1`] = `
<div>
  <div
    style="display: flex; align-items: center; height: 24px;"
  >
    <div
      class="ctvabz1 soui-tag-tag c-46s9fg soui-tag-default chg5eon soui-tag-bright"
    >
      <div
        class="c-3cli0a soui-tag-wrapper"
      >
        <span
          class="c-tcgym4 soui-tag-container"
        >
          Tag 1
        </span>
      </div>
      <div
        class="c-uj954c soui-tag-close-icon"
      >
        <span
          class="c-dd149t soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c-46s9fg soui-tag-default chg5eon soui-tag-bright"
    >
      <div
        class="c-3cli0a soui-tag-wrapper"
      >
        <span
          class="c-tcgym4 soui-tag-container"
        >
          Tag 2
        </span>
      </div>
      <div
        class="c-uj954c soui-tag-close-icon"
      >
        <span
          class="c-dd149t soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c-46s9fg soui-tag-default chg5eon soui-tag-bright c61m0nt soui-tag-disabled"
    >
      <div
        class="c-3cli0a soui-tag-wrapper"
      >
        <span
          class="c-tcgym4 soui-tag-container"
        >
          Tag 3
        </span>
      </div>
      <div
        class="c-uj954c soui-tag-close-icon"
      >
        <span
          class="c-dd149t soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ctvabz1 soui-tag-tag c-46s9fg soui-tag-default cmzylol soui-tag-outline"
      style="cursor: pointer; border-style: dashed;"
    >
      <span
        class="c-3cli0a soui-tag-wrapper"
      >
        <div
          style="display: flex; align-items: center;"
        >
          <div
            style="color: rgb(102, 108, 124); margin-right: 4px;"
          >
            + 
          </div>
          <div>
            Add Tag
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about input 1`] = `
<div>
  <div
    class="ctvabz1 soui-tag-tag c-46s9fg soui-tag-default chg5eon soui-tag-bright"
  >
    <div
      class="c-3cli0a soui-tag-wrapper"
    >
      <span
        class="c-tcgym4 soui-tag-container"
      >
        Abc
      </span>
    </div>
    <div
      class="c-uj954c soui-tag-close-icon"
    >
      <span
        class="c-dd149t soui-tag-close-icon-wrapper"
      >
        <svg
          height="10"
          viewBox="0 0 10 10"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Shape] should render correctly about shape 1`] = `
<div>
  <div
    class="ctvabz1 soui-tag-tag c-46s9fg soui-tag-default chg5eon soui-tag-bright"
  >
    <span
      class="c-3cli0a soui-tag-wrapper"
    >
      Default
    </span>
  </div>
  <div
    class="ctvabz1 soui-tag-tag c-6tndcg soui-tag-rounded c-46s9fg soui-tag-default chg5eon soui-tag-bright"
  >
    <span
      class="c-3cli0a soui-tag-wrapper"
    >
      Rounded
    </span>
  </div>
</div>
`;
